--- a/apriltag.pc.in
+++ b/apriltag.pc.in
@@ -6,5 +6,5 @@ libdir=${exec_prefix}/lib
 Name: apriltag
 Description: AprilTag detector library
 Version: 0.10.0
-Cflags: -I${includedir}
+Cflags: -I${includedir} -fPIC
 Libs: -L${libdir} -lapriltag
